dev/service-ui2.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-1
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: hello-world-1
  type:LoadBalancer
