dev/services.yaml
apiVersion: v1
kind: Service
metadata:  
  
  labels:
    app.kubernetes.io/instance: cloud-dev
  name: hello-world
  namespace: argocd  
spec:  
  ports:
  - nodePort: 31892
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: hello-world
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
