dev/hello-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-vs
spec:
  hosts:
  - "*"
  gateways:
  - cloud-gateway
  http:
  - match:    
    - uri:
        prefix: /
    route:
    - destination:
        host: hello-world
        port:
          number: 8080
