dev/hello-virtula-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hello-world--Virtual-service
  namespace: istio-system
spec:
  hosts:
  - hello.world.cloud.com
  gateways:
  - cloud-gateway
  http:  
    route:
    - destination:
        host: hello.world.
        port:
          number: 8080
